# algebra

./: Cargo.toml  README.md
src/: equation.rs  lib.rs
